--- a/homework05/pod-A.yml
+++ b/homework05/pod-A.yml
@@ -3,9 +3,11 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: hello
+  labels: 
+    greeting: "personalized"
 spec:
   containers:
     - name: hello
       image: ubuntu:18.04
-      command: ['sh', '-c', 'echo "Hello, Kubernetes!" && sleep 3600']
+      command: ['sh', '-c', 'echo "Hello, $NAME" && sleep 3600']
 
